--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -89,7 +89,7 @@
             {% block content %}
             {% endblock %}
         </div>
-        <div class='span3'>
+        <div class='sidebar span3'>
             {% block sidebar %}
             {% endblock %}
         </div>
