adding border-bottom to challenges section

--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -73,7 +73,7 @@
                     <br>
                 </div>
             </div>
-            <h3>Challenges</h3>
+            <h3 class='challenges-section'>Challenges</h3>
             <div class='tabbable'>
                 <ul class='nav nav-tabs'>
                     <li class='active'><a href='#unlocked-challenges' data-toggle='tab'><i class='icon-star text-warning'></i> Unlocked</a></li>
