--- a/vcweb/static/css/lighterprints/style.css
+++ b/vcweb/static/css/lighterprints/style.css
@@ -83,15 +83,6 @@ div.lighterprints-scoreboard h2 {
     font-family: 'TrumpGothicWestW01-Bold', sans-serif;
 }
 div.lighterprints-scoreboard h5 {
-    letter-spacing:1pt;
-    line-height:187%;
-    color:rgb(65,85,93);
-    /* Firefox v4.0+ , Safari v5.1+ , Chrome v10.0+, IE v10+ and by Opera v10.5+ */
-    text-shadow:0px 1px 1px rgb(255,255,255);
-    -ms-filter:"progid:DXImageTransform.Microsoft.dropshadow(OffX = 0,OffY = 1,Color = #ffffffff,Positive = true)";zoom:1;
-    filter:progid:DXImageTransform.Microsoft.dropshadow(OffX = 0,OffY = 1,Color = #ffffffff,Positive = true);
-    font-size: 1.1em;
-    font-weight: normal;
     padding-bottom: 15px;
 }
 .badge-lighterprints-green {
@@ -105,7 +96,17 @@ div.lighterprints-scoreboard h5 {
 .lighterprints-blue {
     color: #13a5e6;
 }
-.uppercase {
+.lighterprints-scoreboard-uppercase {
+    letter-spacing:1pt;
+    line-height:187%;
+    color:rgb(65,85,93);
+    /* Firefox v4.0+ , Safari v5.1+ , Chrome v10.0+, IE v10+ and by Opera v10.5+ */
+    text-shadow:0px 1px 1px rgb(255,255,255);
+    -ms-filter:"progid:DXImageTransform.Microsoft.dropshadow(OffX = 0,OffY = 1,Color = #ffffffff,Positive = true)";zoom:1;
+    filter:progid:DXImageTransform.Microsoft.dropshadow(OffX = 0,OffY = 1,Color = #ffffffff,Positive = true);
+    font-size: 1.2em;
+    font-weight: normal;
+    padding-bottom: 15px;
     text-transform: uppercase;
 }
 .lighterprints-sidebar {
@@ -119,4 +120,8 @@ div.lighterprints-scoreboard h5 {
 }
 .challenges-section {
     border-bottom: 1px solid #CCC;
+}
+.group-level {
+    margin-top: -15px;
+    vertical-align: top;
 }
