--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -152,18 +152,15 @@
             </div>
         </div>
         <div class='tab-pane' id='group-wall'>
-            <h3>Chat messages</h3>
-            <form id='chat-form' class='form-horizontal' data-bind='submit: submitChatMessage'>
+            <h1 class='dashboard-header'><i class='icon-comment'></i> My Team</h3>
+            <h3>Team Chat</h3>
+            <form id='chat-form' data-bind='submit: submitChatMessage'>
+                <div class='input-prepend'>
+                    <span class='add-on'><i class='icon-comment'></i></span>
+                    <input style='width: 90%;' type='text' id='chatText' name='message' placeholder='Send a message' />
+                </div>
                 <input type='hidden' name='participant_group_id' value='{{participant_group_relationship.id}}'/>
-                <div class='control-group'>
-                    <label class='control-label' for='chatText'>Chat</label>
-                    <div class='controls'>
-                        <input type='text' id='chatText' name='message' placeholder='Send a message to your group' />
-                    </div>
-                </div>
-                <div class='control-group'>
-                    <div class='controls'><a class='btn' data-bind='click: submitChatMessage'>Send</a></div>
-                </div>
+                <button class='btn btn-primary' data-bind='click: submitChatMessage'>Send</button>
             </form>
 
             <div id='chat-div' class='scrollable-messages'>
